@@ -1,3 +1,9 @@
+2008-10-27  Gabor Csardi  <csardi@szaffi>
+
+	* interfaces/R/igraph/R/structural.properties.R	(transitivity) :
+	* interfaces/R/src/rinterface.c.in (R_igraph_transitivity_barrat) :
+	weighted transitivity calculation added
+
 2008-10-24  Gabor Csardi  <csardi@szaffi>
 
 	* interfaces/R/igraph/R/print.R (print.igraph) : quote symbolic
